Added two new notebooks

--- a/notebook_dense_autoencoder.ipynb
+++ b/notebook_dense_autoencoder.ipynb
@@ -31,7 +31,7 @@
     "id": "_xnMOsbqHz61"
    },
    "source": [
-    "# Simple EncoderDecoder"
+    "# Dense EncoderDecoder"
    ]
   },
   {
@@ -298,34 +298,28 @@
     "import sys\n",
     "np.set_printoptions(threshold=sys.maxsize)\n",
     "\n",
-    "def build_simple_autoencoder_model(profile_pngs_gray_objs, midcurve_pngs_gray_objs, encoding_dim = 100, input_dim = 10000):\n",
+    "def build_dense_autoencoder_model(profile_pngs_gray_objs, midcurve_pngs_gray_objs,encoding_dim = 100, input_dim = 10000):\n",
     "    # this is our input placeholder\n",
     "    input_img = Input(shape=(input_dim,))\n",
     "    \n",
     "    # \"encoded\" is the encoded representation of the input\n",
-    "    encoded = Dense(encoding_dim, activation='relu',activity_regularizer=regularizers.l1(10e-5))(input_img)\n",
+    "    encoded = Dense(encoding_dim, activation='relu')(input_img)\n",
+    "    encoded = Dense(100, activation='relu')(encoded)\n",
+    "    encoded = Dense(50, activation='relu')(encoded)\n",
+    "    \n",
     "    # \"decoded\" is the lossy reconstruction of the input\n",
-    "    decoded = Dense(input_dim, activation='sigmoid')(encoded) \n",
+    "    decoded = Dense(50, activation='relu')(encoded)\n",
+    "    decoded = Dense(100, activation='relu')(decoded)\n",
+    "    decoded = Dense(input_dim, activation='sigmoid')(decoded) \n",
     "    \n",
     "    # Model 1: Full AutoEncoder, includes both encoder single dense layer and decoder single dense layer. \n",
     "    # This model maps an input to its reconstruction\n",
     "    autoencoder = Model(input_img, decoded)\n",
     "            \n",
-    "    # Model 2: a separate encoder model: -------------------\n",
-    "    # this model maps an input to its encoded representation\n",
-    "    encoder = Model(input_img, encoded)\n",
-    "    \n",
-    "    # Model 3: a separate encoder model: -------------------\n",
-    "    # create a placeholder for an encoded (32-dimensional) input\n",
-    "    encoded_input = Input(shape=(encoding_dim,))\n",
-    "    # retrieve the last layer of the autoencoder model\n",
-    "    decoder_layer = autoencoder.layers[-1]\n",
-    "    # create the decoder model\n",
-    "    decoder = Model(encoded_input, decoder_layer(encoded_input))\n",
-    "    \n",
     "    # Compilation of Autoencoder (only)\n",
     "    autoencoder.compile(optimizer='adadelta', loss='binary_crossentropy')\n",
     "    \n",
+    "                \n",
     "    # Training\n",
     "    profile_pngs_flat_objs = [x.reshape(input_dim) for x in profile_pngs_gray_objs]\n",
     "    midcurve_pngs_flat_objs = [x.reshape(input_dim) for x in midcurve_pngs_gray_objs]\n",
@@ -344,9 +338,10 @@
     "                shuffle=True,\n",
     "                validation_data=(x_test, y_test))\n",
     "        \n",
-    "    encoded_imgs = encoder.predict(x_test)\n",
-    "    decoded_imgs = decoder.predict(encoded_imgs)    \n",
-    "    return x_test,decoded_imgs    "
+    "    encoded_imgs = autoencoder.predict(x_test)\n",
+    "    decoded_imgs = autoencoder.predict(encoded_imgs)    \n",
+    "    \n",
+    "    return x_test,decoded_imgs"
    ]
   },
   {
@@ -793,7 +788,7 @@
     }
    ],
    "source": [
-    "original_imgs,decoded_imgs = build_simple_autoencoder_model(profile_pngs_objs, midcurve_pngs_objs)\n",
+    "original_imgs,decoded_imgs = build_dense_autoencoder_model(profile_pngs_objs, midcurve_pngs_objs)\n",
     "plot_results(original_imgs,decoded_imgs)"
    ]
   },
