--- a/notebook_cnn_autoencoder.ipynb
+++ b/notebook_cnn_autoencoder.ipynb
@@ -31,7 +31,7 @@
     "id": "_xnMOsbqHz61"
    },
    "source": [
-    "# Simple EncoderDecoder"
+    "# CNN (Convolutional) EncoderDecoder"
    ]
   },
   {
@@ -298,37 +298,38 @@
     "import sys\n",
     "np.set_printoptions(threshold=sys.maxsize)\n",
     "\n",
-    "def build_simple_autoencoder_model(profile_pngs_gray_objs, midcurve_pngs_gray_objs, encoding_dim = 100, input_dim = 10000):\n",
-    "    # this is our input placeholder\n",
-    "    input_img = Input(shape=(input_dim,))\n",
+    "def build_cnn_autoencoder_model(profile_pngs_gray_objs, midcurve_pngs_gray_objs,encoding_dim = 100, input_dim = 100):\n",
+    "    input_img = Input(shape=(input_dim, input_dim, 1))  # adapt this if using `channels_first` image data format\n",
     "    \n",
-    "    # \"encoded\" is the encoded representation of the input\n",
-    "    encoded = Dense(encoding_dim, activation='relu',activity_regularizer=regularizers.l1(10e-5))(input_img)\n",
-    "    # \"decoded\" is the lossy reconstruction of the input\n",
-    "    decoded = Dense(input_dim, activation='sigmoid')(encoded) \n",
+    "    x = Conv2D(16, (3, 3), activation='relu', padding='same')(input_img)\n",
+    "    x = MaxPooling2D((2, 2), padding='same')(x)\n",
+    "    x = Conv2D(8, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = MaxPooling2D((2, 2), padding='same')(x)\n",
+    "    x = Conv2D(8, (3, 3), activation='relu', padding='same')(x)\n",
+    "    encoded = MaxPooling2D((2, 2), padding='same')(x)\n",
+    "\n",
+    "    # at this point the representation is (4, 4, 8) i.e. 128-dimensional\n",
+    "    \n",
+    "    x = Conv2D(8, (3, 3), activation='relu', padding='same')(encoded)\n",
+    "    x = UpSampling2D((2, 2))(x)\n",
+    "    x = Conv2D(8, (3, 3), activation='relu', padding='same')(x)\n",
+    "    x = UpSampling2D((2, 2))(x)\n",
+    "    x = Conv2D(16, (3, 3), activation='relu')(x)\n",
+    "    x = UpSampling2D((2, 2))(x)\n",
+    "    decoded = Conv2D(1, (3, 3), activation='sigmoid', padding='same')(x)\n",
+    "    \n",
     "    \n",
     "    # Model 1: Full AutoEncoder, includes both encoder single dense layer and decoder single dense layer. \n",
     "    # This model maps an input to its reconstruction\n",
     "    autoencoder = Model(input_img, decoded)\n",
-    "            \n",
-    "    # Model 2: a separate encoder model: -------------------\n",
-    "    # this model maps an input to its encoded representation\n",
-    "    encoder = Model(input_img, encoded)\n",
-    "    \n",
-    "    # Model 3: a separate encoder model: -------------------\n",
-    "    # create a placeholder for an encoded (32-dimensional) input\n",
-    "    encoded_input = Input(shape=(encoding_dim,))\n",
-    "    # retrieve the last layer of the autoencoder model\n",
-    "    decoder_layer = autoencoder.layers[-1]\n",
-    "    # create the decoder model\n",
-    "    decoder = Model(encoded_input, decoder_layer(encoded_input))\n",
     "    \n",
     "    # Compilation of Autoencoder (only)\n",
     "    autoencoder.compile(optimizer='adadelta', loss='binary_crossentropy')\n",
     "    \n",
+    "    \n",
     "    # Training\n",
-    "    profile_pngs_flat_objs = [x.reshape(input_dim) for x in profile_pngs_gray_objs]\n",
-    "    midcurve_pngs_flat_objs = [x.reshape(input_dim) for x in midcurve_pngs_gray_objs]\n",
+    "    profile_pngs_flat_objs = [x.reshape(input_dim,input_dim,1) for x in profile_pngs_gray_objs]\n",
+    "    midcurve_pngs_flat_objs = [x.reshape(input_dim,input_dim,1) for x in midcurve_pngs_gray_objs]\n",
     "    \n",
     "    profile_pngs_objs = np.array(profile_pngs_flat_objs)\n",
     "    midcurve_pngs_objs= np.array(midcurve_pngs_flat_objs)\n",
@@ -339,14 +340,15 @@
     "    x_test = profile_pngs_objs[train_size:]\n",
     "    y_test = midcurve_pngs_objs[train_size:]\n",
     "    autoencoder.fit(x_train, y_train,\n",
-    "                epochs=200,\n",
+    "                epochs=50,\n",
     "                batch_size=5,\n",
     "                shuffle=True,\n",
     "                validation_data=(x_test, y_test))\n",
     "        \n",
-    "    encoded_imgs = encoder.predict(x_test)\n",
-    "    decoded_imgs = decoder.predict(encoded_imgs)    \n",
-    "    return x_test,decoded_imgs    "
+    "    encoded_imgs = autoencoder.predict(x_test)\n",
+    "    decoded_imgs = autoencoder.predict(encoded_imgs)    \n",
+    "        \n",
+    "    return x_test,decoded_imgs"
    ]
   },
   {
@@ -793,7 +795,7 @@
     }
    ],
    "source": [
-    "original_imgs,decoded_imgs = build_simple_autoencoder_model(profile_pngs_objs, midcurve_pngs_objs)\n",
+    "original_imgs,decoded_imgs = build_cnn_autoencoder_model(profile_pngs_objs, midcurve_pngs_objs)\n",
     "plot_results(original_imgs,decoded_imgs)"
    ]
   },
