Matplotlib error resolved
Increased the figure size to accurately display the images

--- a/notebook_pix2pix_autoencoder-colab.ipynb
+++ b/notebook_pix2pix_autoencoder-colab.ipynb
@@ -582,7 +582,7 @@
         "        gen_imgs = 0.5 * gen_imgs + 0.5\n",
         "\n",
         "        titles = ['Condition', 'Generated', 'Original']\n",
-        "        fig, axs = plt.subplots(r, c)\n",
+        "        fig, axs = plt.subplots(r, c, figsize=(15,15))\n",
         "        cnt = 0\n",
         "        for i in range(r):\n",
         "            for j in range(c):\n",
