--- a/notebook_simple_encoderdecoder.ipynb
+++ b/notebook_simple_encoderdecoder.ipynb
@@ -109,7 +109,6 @@
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import clear_output\n",
-    "import os\n",
     "from keras.preprocessing.image import img_to_array, load_img\n",
     "from random import shuffle\n",
     "import PIL\n",
@@ -290,63 +289,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.layers import Input, Dense\n",
-    "from keras.models import Model\n",
     "from keras import regularizers\n",
-    "\n",
+    "from keras.layers import Input, Dense\n",
+    "from keras.models import Model, load_model\n",
+    "from prepare_data import get_training_data\n",
+    "from prepare_plots import plot_results\n",
+    "import os\n",
     "import numpy as np\n",
     "import sys\n",
+    "import random\n",
+    "\n",
     "np.set_printoptions(threshold=sys.maxsize)\n",
     "\n",
-    "def build_simple_autoencoder_model(profile_pngs_gray_objs, midcurve_pngs_gray_objs, encoding_dim = 100, input_dim = 10000):\n",
-    "    # this is our input placeholder\n",
-    "    input_img = Input(shape=(input_dim,))\n",
-    "    \n",
-    "    # \"encoded\" is the encoded representation of the input\n",
-    "    encoded = Dense(encoding_dim, activation='relu',activity_regularizer=regularizers.l1(10e-5))(input_img)\n",
-    "    # \"decoded\" is the lossy reconstruction of the input\n",
-    "    decoded = Dense(input_dim, activation='sigmoid')(encoded) \n",
-    "    \n",
-    "    # Model 1: Full AutoEncoder, includes both encoder single dense layer and decoder single dense layer. \n",
-    "    # This model maps an input to its reconstruction\n",
-    "    autoencoder = Model(input_img, decoded)\n",
-    "            \n",
-    "    # Model 2: a separate encoder model: -------------------\n",
-    "    # this model maps an input to its encoded representation\n",
-    "    encoder = Model(input_img, encoded)\n",
-    "    \n",
-    "    # Model 3: a separate encoder model: -------------------\n",
-    "    # create a placeholder for an encoded (32-dimensional) input\n",
-    "    encoded_input = Input(shape=(encoding_dim,))\n",
-    "    # retrieve the last layer of the autoencoder model\n",
-    "    decoder_layer = autoencoder.layers[-1]\n",
-    "    # create the decoder model\n",
-    "    decoder = Model(encoded_input, decoder_layer(encoded_input))\n",
-    "    \n",
-    "    # Compilation of Autoencoder (only)\n",
-    "    autoencoder.compile(optimizer='adadelta', loss='binary_crossentropy')\n",
-    "    \n",
-    "    # Training\n",
-    "    profile_pngs_flat_objs = [x.reshape(input_dim) for x in profile_pngs_gray_objs]\n",
-    "    midcurve_pngs_flat_objs = [x.reshape(input_dim) for x in midcurve_pngs_gray_objs]\n",
-    "    \n",
-    "    profile_pngs_objs = np.array(profile_pngs_flat_objs)\n",
-    "    midcurve_pngs_objs= np.array(midcurve_pngs_flat_objs)\n",
-    "    \n",
-    "    train_size = int(len(profile_pngs_objs)*0.7)\n",
-    "    x_train = profile_pngs_objs[:train_size]\n",
-    "    y_train = midcurve_pngs_objs[:train_size]\n",
-    "    x_test = profile_pngs_objs[train_size:]\n",
-    "    y_test = midcurve_pngs_objs[train_size:]\n",
-    "    autoencoder.fit(x_train, y_train,\n",
-    "                epochs=500,\n",
-    "                batch_size=5,\n",
-    "                shuffle=True,\n",
-    "                validation_data=(x_test, y_test))\n",
+    "class simple_encoderdecoder:\n",
+    "    def __init__(self):\n",
+    "        self.encoding_dim = 100\n",
+    "        self.input_dim = 10000\n",
+    "        self.epochs = 200\n",
+    "        self.autoencoder_model_pkl = \"models/autoencoder_model.pkl\"\n",
+    "        self.encoder_model_pkl = \"models/encoder_model.pkl\"\n",
+    "        self.decoder_model_pkl = \"models/decoder_model.pkl\"\n",
+    "                \n",
+    "    def process_images(self,grayobjs):\n",
+    "        flat_objs = [x.reshape(self.input_dim) for x in grayobjs]\n",
+    "        pngs_objs = np.array(flat_objs)\n",
+    "        return pngs_objs\n",
+    "\n",
+    "    def train(self,\n",
+    "            profile_pngs_gray_objs, \n",
+    "            midcurve_pngs_gray_objs):\n",
     "        \n",
-    "    encoded_imgs = encoder.predict(x_test)\n",
-    "    decoded_imgs = decoder.predict(encoded_imgs)    \n",
-    "    return x_test,decoded_imgs    "
+    "        if not os.path.exists(self.autoencoder_model_pkl):\n",
+    "            # this is our input placeholder\n",
+    "            input_img = Input(shape=(self.input_dim,))\n",
+    "            \n",
+    "            # \"encoded\" is the encoded representation of the input\n",
+    "            encoded = Dense(self.encoding_dim, activation='relu',activity_regularizer=regularizers.l1(10e-5))(input_img)\n",
+    "            # \"decoded\" is the lossy reconstruction of the input\n",
+    "            decoded = Dense(self.input_dim, activation='sigmoid')(encoded) \n",
+    "            \n",
+    "            # Model 1: Full AutoEncoder, includes both encoder single dense layer and decoder single dense layer. \n",
+    "            # This model maps an input to its reconstruction\n",
+    "            self.autoencoder = Model(input_img, decoded)\n",
+    "                    \n",
+    "            # Model 2: a separate encoder model: -------------------\n",
+    "            # this model maps an input to its encoded representation\n",
+    "            self.encoder = Model(input_img, encoded)\n",
+    "            \n",
+    "            # Model 3: a separate encoder model: -------------------\n",
+    "            # create a placeholder for an encoded (32-dimensional) input\n",
+    "            encoded_input = Input(shape=(self.encoding_dim,))\n",
+    "            # retrieve the last layer of the autoencoder model\n",
+    "            decoder_layer = self.autoencoder.layers[-1]\n",
+    "            # create the decoder model\n",
+    "            self.decoder = Model(encoded_input, decoder_layer(encoded_input))\n",
+    "            \n",
+    "            # Compilation of Autoencoder (only)\n",
+    "            self.autoencoder.compile(optimizer='adadelta', loss='binary_crossentropy')\n",
+    "            \n",
+    "#             # Training\n",
+    "#             profile_pngs_flat_objs = [x.reshape(self.input_dim) for x in profile_pngs_gray_objs]\n",
+    "#             midcurve_pngs_flat_objs = [x.reshape(self.input_dim) for x in midcurve_pngs_gray_objs]\n",
+    "#             \n",
+    "#             profile_pngs_objs = np.array(profile_pngs_flat_objs)\n",
+    "#             midcurve_pngs_objs= np.array(midcurve_pngs_flat_objs)\n",
+    "#             \n",
+    "            profile_pngs_objs = self.process_images(profile_pngs_gray_objs)\n",
+    "            midcurve_pngs_objs = self.process_images(midcurve_pngs_gray_objs)\n",
+    "            \n",
+    "#             train_size = int(len(profile_pngs_objs)*0.7)\n",
+    "#             self.x_train = profile_pngs_objs[:train_size]\n",
+    "#             self.y_train = midcurve_pngs_objs[:train_size]\n",
+    "#             self.x_test = profile_pngs_objs[train_size:]\n",
+    "#             self.y_test = midcurve_pngs_objs[train_size:]\n",
+    "#             self.autoencoder.fit(self.x_train, self.y_train,\n",
+    "#                         epochs=self.epochs,\n",
+    "#                         batch_size=5,\n",
+    "#                         shuffle=True,\n",
+    "#                         validation_data=(self.x_test, self.y_test))\n",
+    "                \n",
+    "            self.x = profile_pngs_objs\n",
+    "            self.y = midcurve_pngs_objs\n",
+    "            self.autoencoder.fit(self.x, self.y,\n",
+    "                        epochs=self.epochs,\n",
+    "                        batch_size=5,\n",
+    "                        shuffle=True)                \n",
+    "            # Save models\n",
+    "            self.autoencoder.save(self.autoencoder_model_pkl)\n",
+    "            self.encoder.save(self.encoder_model_pkl)\n",
+    "            self.decoder.save(self.decoder_model_pkl)  \n",
+    "        else:\n",
+    "            # Save models\n",
+    "            self.autoencoder = load_model(self.autoencoder_model_pkl)\n",
+    "            self.encoder= load_model(self.encoder_model_pkl)\n",
+    "            self.decoder = load_model(self.decoder_model_pkl)\n",
+    "    \n",
+    "    def predict(self, test_profile_images):\n",
+    "        png_profile_images = self.process_images(test_profile_images)\n",
+    "        encoded_imgs = self.encoder.predict(png_profile_images)\n",
+    "        decoded_imgs = self.decoder.predict(encoded_imgs)    \n",
+    "        return test_profile_images,decoded_imgs  "
    ]
   },
   {
@@ -793,8 +835,13 @@
     }
    ],
    "source": [
-    "original_imgs,decoded_imgs = build_simple_autoencoder_model(profile_pngs_objs, midcurve_pngs_objs)\n",
-    "plot_results(original_imgs,decoded_imgs)"
+    "profile_gray_objs, midcurve_gray_objs = get_training_data()\n",
+    "endec = simple_encoderdecoder()\n",
+    "endec.train(profile_gray_objs, midcurve_gray_objs)\n",
+    "    \n",
+    "test_gray_images = random.sample(profile_gray_objs,5)\n",
+    "original_profile_imgs,predicted_midcurve_imgs = endec.predict(test_gray_images)\n",
+    "plot_results(original_profile_imgs,predicted_midcurve_imgs)"
    ]
   },
   {
