Moved from keras to tf.keras, need to test thoroughly though

--- a/core/cnnencoderdecoder/notebook_cnn_encoderdecoder.ipynb
+++ b/core/cnnencoderdecoder/notebook_cnn_encoderdecoder.ipynb
@@ -48,8 +48,8 @@
    "outputs": [],
    "source": [
     "# requirements = \"\"\"\n",
-    "# keras\n",
-    "# git+https://www.github.com/keras-team/keras-contrib.git\n",
+    "# tensorflow\n",
+    "# drawSvg\n",
     "# matplotlib\n",
     "# numpy\n",
     "# scipy\n",
@@ -110,7 +110,7 @@
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import clear_output\n",
     "import os\n",
-    "from keras.preprocessing.image import img_to_array, load_img\n",
+    "from tensorflow.keras.preprocessing.image import img_to_array, load_img\n",
     "from random import shuffle\n",
     "import PIL\n",
     "import json\n",
@@ -290,9 +290,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.layers import Input, Dense\n",
-    "from keras.models import Model\n",
-    "from keras import regularizers\n",
+    "from tensorflow.keras.layers import Input, Dense\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras import regularizers\n",
     "\n",
     "import numpy as np\n",
     "import sys\n",
