--- a/core/denseencoderdecoder/notebook_dense_encoderdecoder.ipynb
+++ b/core/denseencoderdecoder/notebook_dense_encoderdecoder.ipynb
@@ -48,8 +48,8 @@
    "outputs": [],
    "source": [
     "# requirements = \"\"\"\n",
-    "# keras\n",
-    "# git+https://www.github.com/keras-team/keras-contrib.git\n",
+    "# tensorflow\n",
+    "# drawSvg\n",
     "# matplotlib\n",
     "# numpy\n",
     "# scipy\n",
@@ -109,7 +109,7 @@
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import clear_output\n",
-    "from keras.preprocessing.image import img_to_array, load_img\n",
+    "from tensorflow.keras.preprocessing.image import img_to_array, load_img\n",
     "from random import shuffle\n",
     "import PIL\n",
     "import json\n",
@@ -289,9 +289,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras import regularizers\n",
-    "from keras.layers import Input, Dense\n",
-    "from keras.models import Model, load_model\n",
+    "from tensorflow.keras import regularizers\n",
+    "from tensorflow.keras.layers import Input, Dense\n",
+    "from tensorflow.keras.models import Model, load_model\n",
     "from prepare_data import get_training_data\n",
     "from prepare_plots import plot_results\n",
     "import numpy as np\n",
