--- a/core/pix2pix/notebook_pix2pix.ipynb
+++ b/core/pix2pix/notebook_pix2pix.ipynb
@@ -50,8 +50,8 @@
    ],
    "source": [
     "requirements = \"\"\"\n",
-    "keras\n",
-    "git+https://www.github.com/keras-team/keras-contrib.git\n",
+    "tensorflow\n",
+    "drawSvg\n",
     "matplotlib\n",
     "numpy\n",
     "scipy\n",
