--- a/core/simpleencoderdecoder/notebook_simple_encoderdecoder.ipynb
+++ b/core/simpleencoderdecoder/notebook_simple_encoderdecoder.ipynb
@@ -48,8 +48,8 @@
    "outputs": [],
    "source": [
     "# requirements = \"\"\"\n",
-    "# keras\n",
-    "# git+https://www.github.com/keras-team/keras-contrib.git\n",
+    "# tensorflow\n",
+    "# drawSvg\n",
     "# matplotlib\n",
     "# numpy\n",
     "# scipy\n",
