--- a/TalksPublications/MidcurveNN_LaTeX/Main_Seminar_MidcurveNN_Presentation.tex
+++ b/TalksPublications/MidcurveNN_LaTeX/Main_Seminar_MidcurveNN_Presentation.tex
@@ -1,7 +1,8 @@
 \documentclass[xcolor=dvipsnames,compress,t,pdf,9pt]{beamer}
 \input{template_presentation}
 \graphicspath{{images/}}
-\title[\insertframenumber /\inserttotalframenumber]{Computing Midcurve by Neural Networks}
+\title[\insertframenumber /\inserttotalframenumber]{Deep Learning for Geometric Algorithms}
+\subtitle[]{Midcurve, a case study}
 
 
 
