Added renamed std latex presentation

--- a/TalksPublications/MidcurveNN_DevFestBrunei2020/midcurvenn_intro.tex
+++ b/TalksPublications/MidcurveNN_DevFestBrunei2020/midcurvenn_intro.tex
@@ -1,9 +1,9 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}[fragile]\frametitle{}
-\begin{center}
-\Large{MidcurveNN : Encoder-Decoder Neural Network for Computing Midcurve of a Thin Polygon}
-\end{center}
-\end{frame}
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \begin{frame}[fragile]\frametitle{}
+% \begin{center}
+% \Large{MidcurveNN : Encoder-Decoder Neural Network for Computing Midcurve of a Thin Polygon}
+% \end{center}
+% \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[fragile]\frametitle{}
