--- a/TalksPublications/IntroToGeoMod/Main_IntroductionToCAD_Presentation.tex
+++ b/TalksPublications/IntroToGeoMod/Main_IntroductionToCAD_Presentation.tex
@@ -1,6 +1,6 @@
 \documentclass[t,pdf]{beamer}
-
-\input{template_presentation_personal}
+\graphicspath{{images/}}
+\input{template_presentation}
 
 %
 %\institute[CoEP]{College of Engineering Pune, India}
@@ -29,23 +29,9 @@
 
 %------------------------------------------------------------------------------------------------------------------
 
-\input{CADIntroduction}
+\input{geomod_seminar_content}
 
-%\section{Midcurves}
-%\input{../DocsSources/IntrodcutionLitSurvey_Midcurves_slides}
-%
-%\section{Proposal}
-%\input{../DocsSources/Body_Midcurves_slides}
-%
-%\section{Conclusion}
-%\input{../DocsSources/Conclusion_Midcurves_slides}
 
-%---------------------------- Default Thanks and References -----------------------------------------------------
-%\section{References}
-%\begin{frame}[allowframebreaks]{References}
-%\bibliographystyle{../Common/IEEEbib}
-%\bibliography{../Common/Bibliography}
-%\end{frame}
 
 \begin{frame}[c]{}
 Thanks ...
