--- a/TalksPublications/IntroToGeoMod/geomod_seminar_content.tex
+++ b/TalksPublications/IntroToGeoMod/geomod_seminar_content.tex
@@ -1,11 +1,11 @@
 \section[CAD]{Introduction to CAD}
 \input{cad_intro}
 
-\section[FBD]{Introduction to Feature-based Design}
-\input{fbd_intro}
+% \section[FBD]{Introduction to Feature-based Design}
+% \input{fbd_intro}
 
-\section[EXR]{Exercises}
-\input{fbd_exercises}
+% \section[EXR]{Exercises}
+% \input{fbd_exercises}
 
 \section[Refs]{References}
 \input{geomod_refs}
