Added dir for paper for GMP2021

--- a/TalksPublications/MidcurveNN_GMP2021/LaTeX/Main_MidcurveNN_gmp2021_draft.tex
+++ b/TalksPublications/MidcurveNN_GMP2021/LaTeX/Main_MidcurveNN_gmp2021_draft.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt,twocolumn,letterpaper]{article}
 \usepackage{caption}
 \usepackage{booktabs}       % professional-quality tables
-\usepackage{cvpr}
+%\usepackage{cvpr}
 \usepackage{times}
 \usepackage{epsfig}
 \usepackage{graphicx}
@@ -16,7 +16,7 @@
 % run, let it finish, and you should be clear).
 \usepackage[breaklinks=true,bookmarks=false]{hyperref}
 
-\cvprfinalcopy % *** Uncomment this line for the final submission
+%\cvprfinalcopy % *** Uncomment this line for the final submission
 
 \def\cvprPaperID{****} % *** Enter the CVPR Paper ID here
 \def\httilde{\mbox{\tt\raisebox{-.5ex}{\symbol{126}}}}
@@ -38,11 +38,11 @@ Pune, India\\
 % Additional authors and addresses can be added with ``\and'',
 % just like the second author.
 % To save space, use either the email address or home page, not both
-\and
-Pranav Budhwant\\
-Pune Institute of Computer Technology\\
-Pune, India\\
-{\tt\small prnvb15@gmail.com}
+%\and
+%Pranav Budhwant\\
+%Pune Institute of Computer Technology\\
+%Pune, India\\
+%{\tt\small prnvb15@gmail.com}
 }
 
 \maketitle
