Updated CADandA jrnl paper

--- a/TalksPublications/MidcurveNN_CADConf2021/CADandA_Paper_MidcurveNN.bib
+++ b/TalksPublications/MidcurveNN_CADConf2021/CADandA_Paper_MidcurveNN.bib
@@ -1,3 +1,52 @@
+@misc{shen2016object,
+      title={Object Skeleton Extraction in Natural Images by Fusing Scale-associated Deep Side Outputs}, 
+      author={Wei Shen and Kai Zhao and Yuan Jiang and Yan Wang and Zhijiang Zhang and Xiang Bai},
+      year={2016},
+      eprint={1603.09446},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{wang2018deepflux,
+      title={DeepFlux for Skeletons in the Wild}, 
+      author={Yukang Wang and Yongchao Xu and Stavros Tsogkas and Xiang Bai and Sven Dickinson and Kaleem Siddiqi},
+      year={2018},
+      eprint={1811.12608},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{zhao2018hifi,
+      title={Hi-Fi: Hierarchical Feature Integration for Skeleton Detection}, 
+      author={Kai Zhao and Wei Shen and Shanghua Gao and Dandan Li and Ming-Ming Cheng},
+      year={2018},
+      eprint={1801.01849},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@article{Shen_2017,
+   title={DeepSkeleton: Learning Multi-Task Scale-Associated Deep Side Outputs for Object Skeleton Extraction in Natural Images},
+   volume={26},
+   ISSN={1941-0042},
+   url={http://dx.doi.org/10.1109/TIP.2017.2735182},
+   DOI={10.1109/tip.2017.2735182},
+   number={11},
+   journal={IEEE Transactions on Image Processing},
+   publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+   author={Shen, Wei and Zhao, Kai and Jiang, Yuan and Wang, Yan and Bai, Xiang and Yuille, Alan},
+   year={2017},
+   month={Nov},
+   pages={5298-5311}
+}
+
+
+@inproceedings{Rodas2019JointOB,
+  title={Joint object boundary and skeleton detection using convolutional neural networks},
+  author={Carles Balsells Rodas},
+  year={2019}
+}
+
 @article{Keil94,
   author = {Mark Keil and Jack Snoeyink},
   title = {On the Time Bound for Convex Decomposition of Simple Polygons},
